Load jwplayer.js from CDN using HTTPS.

--- a/jw7-hls-js-caterpillar-mp3.html
+++ b/jw7-hls-js-caterpillar-mp3.html
@@ -33,7 +33,7 @@ hlshtml: true
 
 <div id="player"></div>
 
-<script src="http://p.jwpcdn.com/player/v/7.7.1/jwplayer.js"></script>
+<script src="https://ssl.jwpcdn.com/player/v/7.7.1/jwplayer.js"></script>
 <script type="text/javascript">
 
 // JW Player 7 Enterprise key for 'Sveriges Utbildningsradio AB'
