--- a/jw7-hls-js-caterpillar-mp3.html
+++ b/jw7-hls-js-caterpillar-mp3.html
@@ -39,7 +39,7 @@ hlshtml: true
 // JW Player 7 Enterprise key for 'Sveriges Utbildningsradio AB'
 jwplayer.key='l6kuLa50/+di7nHLC0MBpJhkGpg2zzOLiTFxDRRjQ0otJDtz';
 
-jwplayer('player').setup({ hlshtml: true, file: 'http://streaming4.ur.se/urse/_definst_/mp3:196000-196999/196066-4.mp3/playlist.m3u8' });
+jwplayer('player').setup({ hlshtml: true, file: 'https://streaming4.ur.se/urse/_definst_/mp3:196000-196999/196066-4.mp3/playlist.m3u8' });
 
 </script>
 </body>
