Added link to issue.

--- a/jw7-hls-js-caterpillar-mp3.html
+++ b/jw7-hls-js-caterpillar-mp3.html
@@ -31,6 +31,9 @@ hlshtml: true
 <p>Environment</p>
 <pre>Browsers without native support for HLS but with support for MSE, eg. Firefox 49 or Chrome 53.</pre>
 
+<p>GitHub Issue</p>
+<pre><a href="https://github.com/jwplayer/jwplayer/issues/1484">https://github.com/jwplayer/jwplayer/issues/1484</a></pre>
+  
 <div id="player"></div>
 
 <script src="https://ssl.p.jwpcdn.com/player/v/7.7.1/jwplayer.js"></script>
