--- a/jw7-hls-js-mp3.html
+++ b/jw7-hls-js-mp3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-<title>Test for mp3 audio source with JW Player 7.8.0-beta.4 using HLS JS Caterpillar provider</title>
+<title>Test for mp3 audio source with JW Player 7.8.1 using HLS JS Caterpillar provider</title>
 </head>
 <body>
-<h1>Test for mp3 audio source with JW Player 7.8.0-beta.4 using HLS JS Caterpillar provider</h1>
+<h1>Test for mp3 audio source with JW Player 7.8.1 using HLS JS Caterpillar provider</h1>
 
 <p>Source:</p>
 <pre>HLS stream with MP3 audio</pre>
@@ -18,7 +18,7 @@
 <pre>Press play.</pre>
 
 <p>JW Player version</p>
-<pre>7.8.0-beta.4 with Enterprise key</pre>
+<pre>7.8.1 with Enterprise key</pre>
 
 <p>Stream server</p>
 <pre>Wowza Streaming Engine 4 Perpetual Edition 4.5.0.01 build18956</pre>
@@ -31,7 +31,7 @@
 
 <div id="player"></div>
 
-<script src="https://ssl.p.jwpcdn.com/player/v/7.8.0-beta.4/jwplayer.js"></script>
+<script src="https://ssl.p.jwpcdn.com/player/v/7.8.1/jwplayer.js"></script>
 <script type="text/javascript">
 
 // JW Player 7 Enterprise key for 'Sveriges Utbildningsradio AB'
