Changed provider name

--- a/jw7-hls-js-mp3.html
+++ b/jw7-hls-js-mp3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-<title>Test for mp3 audio source with JW Player 7.8.1 using HLS JS Caterpillar provider</title>
+<title>Test for mp3 audio source with JW Player 7.8.1 using HLS JS provider</title>
 </head>
 <body>
-<h1>Test for mp3 audio source with JW Player 7.8.1 using HLS JS Caterpillar provider</h1>
+<h1>Test for mp3 audio source with JW Player 7.8.1 using HLS JS provider</h1>
 
 <p>Source:</p>
 <pre>HLS stream with MP3 audio</pre>
