Updated browser versions.

--- a/jw7-hls-js-mp3.html
+++ b/jw7-hls-js-mp3.html
@@ -9,8 +9,8 @@
 <pre>HLS stream with MP3 audio</pre>
 
 <p>Actual behavior</p>
-<pre>Playbacks freezes about every ten seconds in Firefox.<br>
-No timeline is visible in Chrome, it says "Live broadcast" even though it's not.</pre>
+<pre>Playbacks freezes about every ten seconds in Firefox 50, seems to work in Firefox 52.<br>
+No timeline is visible in Chrome 55 and 57, it says "Live broadcast" even though it's not.</pre>
 
 <p>Expected behavior</p>
 <pre>Audio stream should play just like it does using the Flash provider.</pre>
@@ -25,7 +25,7 @@ No timeline is visible in Chrome, it says "Live broadcast" even though it's not.
 <pre>Wowza Streaming Engine 4 Perpetual Edition 4.5.0.01 build18956</pre>
 
 <p>Environment</p>
-<pre>Browsers without native support for HLS but with support for MSE, eg. Firefox 50 or Chrome 55.</pre>
+<pre>Browsers without native support for HLS but with support for MSE, eg. Firefox 50-52 or Chrome 55-57.</pre>
 
 <p>GitHub Issue</p>
 <pre><a href="https://github.com/jwplayer/jwplayer/issues/1484">https://github.com/jwplayer/jwplayer/issues/1484</a></pre>
